--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -16,14 +16,30 @@
 
 <script th:src="@{/javascript/open-source/particles-lib/particles.js}"></script>
 <script th:src="@{/javascript/open-source/particles-lib/design-settings/calm_dark_design.js}"></script>
+<div th:if="${isGod}" id="new_section" class="display-none">
+    <span class="display-none" id="current_module"></span>
+
+    <div id="input-wrapper">
+        <input type="text" placeholder="Название ресурса">
+        <input type="text" placeholder="Ссылка на ресурс">
+        <div id="submit-section">Добавить</div>
+    </div>
+    <span id="close_add_section" class="cancel">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" width="20"
+             height="20">
+            <path d="M 0 0 L 25 25 M 0 25 L 25 0" stroke="white" fill="none" stroke-width="3"/>
+        </svg>
+    </span>
+</div>
+<div th:if="${isGod}" id="smoke" class="smoke display-none"></div>
 <div class="wrapper">
     <div>
         <div th:each="m : ${moduleList}" class="context">
             <span th:if="${isGod}" class="plus-wrapper">
-                <span style="display: none" th:text="${m.id}"></span>
+                <span class ="display-none" th:text="${m.id}"></span>
                 <svg  class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30"
                       height="30">
-                    <path d="M 0 15 L 30 15 M 15 0 L 15 30" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
+                    <path d="M 0 15 L 30 15 M 15 0 L 15 30" stroke="white" fill="none" stroke-width="3"/>
                 </svg>
             </span>
             <div class="table-wrapper" >
@@ -40,18 +56,18 @@
                                 <span th:text="${section.name}"></span>
                                 <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30"
                                      height="20">
-                                    <path d="M 1 1 L 15 19 L 29 1" stroke="white" fill="none" stroke-width="3"/>
+                                    <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
                                 </svg>
                             </a>
                             <span class="cross">
-                                <span style="display: none" th:text="${section.id}"></span>
+                                <span class="display-none"  th:text="${section.id}"></span>
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" width="25"
                                       height="25">
                                     <path d="M 0 0 L 25 25 M 0 25 L 25 0" stroke="white" fill="none" stroke-width="3"/>
                                 </svg>
                             </span>
                             <span class="edit">
-                                <span style="display: none" th:text="${section.id}"></span>
+                                <span class="display-none" th:text="${section.id}"></span>
                                 <svg width="40" height="35">
                                     <circle cx="20" cy="17.5" r="15" stroke="white" stroke-width="3" fill="none" />
                                     <path d="M 1 14 L 5 19 L 10 15" stroke="white" fill="none" stroke-width="3"/>
