feature: новые секции можно добавлять из интерфейса приложения при условии наличия максимальной роли

--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -20,8 +20,8 @@
     <span class="display-none" id="current_module"></span>
 
     <div id="input-wrapper">
-        <input type="text" placeholder="Название ресурса">
-        <input type="text" placeholder="Ссылка на ресурс">
+        <input id="add-resource-name" type="text" placeholder="Название ресурса">
+        <input id="add-resource-link" type="text" placeholder="Ссылка на ресурс">
         <div id="submit-section">Добавить</div>
     </div>
     <span id="close_add_section" class="cancel">
