--- a/src/main/resources/static/css/closed-source/theory-styles.css
+++ b/src/main/resources/static/css/closed-source/theory-styles.css
@@ -233,13 +233,14 @@ tbody, thead, tr, td, th{
 input{
     pointer-events: all;
     outline: none;
-    border: none;
+    border: 3px solid white;
     padding-left: 10px;
     width: 40vh;
     height: 6vh;
     font-size: 25px;
     border-radius: 20px;
     margin-top: 15%;
+    transition: border-color 0.5s ease;
 }
 svg{
     transition: background-color 0.4s ease;
@@ -281,4 +282,8 @@ svg{
     z-index: 100;
     width: 100%;
     height: 100%;
+}
+
+.red-border{
+    border: 3px solid red!important;
 }
