--- a/src/main/resources/static/css/closed-source/theory-styles.css
+++ b/src/main/resources/static/css/closed-source/theory-styles.css
@@ -57,10 +57,10 @@ tbody, thead, tr, td, th{
     border-top: 1px solid #f5f5f5bf;
     cursor: pointer;
     position: relative;
-    transition: opacity 0.3s ease;
+    transition: background-color 0.7s ease;
 }
 .section:hover{
-    opacity: 0.8;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 .display-none{
     display: none;
@@ -167,17 +167,16 @@ tbody, thead, tr, td, th{
 .cross, .cancel{
     background-color: #c00b0b;
 }
-.plus:hover, .cross:hover, .edit:hover{
+.plus:hover{
     cursor: pointer;
 }
-.cancel:hover{
+.cancel:hover, .cross:hover, .edit:hover{
     opacity: 0.8;
     cursor: pointer;
 }
 
 .plus-wrapper, .cross, .edit{
     position: absolute;
-    z-index: 4;
 }
 .cancel{
     position: absolute;
