--- a/src/main/resources/templates/theory.html
+++ b/src/main/resources/templates/theory.html
@@ -22,6 +22,10 @@
     <div id="input-wrapper">
         <input id="add-resource-name" type="text" placeholder="Название ресурса">
         <input id="add-resource-link" type="text" placeholder="Ссылка на ресурс">
+        <div class="checkbox-wrapper">
+            <label for="visible-for-student">Ученики могут видеть ресурс</label>
+            <input id="visible-for-student" type="checkbox">
+        </div>
         <div id="submit-section" class="display-none">Добавить</div>
         <div id="edit-section" class="display-none">Изменить</div>
     </div>
@@ -63,7 +67,7 @@
                     </thead>
                     <tbody>
                     <tr th:each="section : ${m.sections}" class="section">
-                        <td style="position: relative">
+                        <td th:if="${!isStudent or section.visibleForStudent==true}" style="position: relative">
                             <a class="link" target="_blank" th:href="${section.link}">
                                 <span th:text="${section.name}"></span>
                                 <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 20" width="30"
@@ -71,17 +75,18 @@
                                     <path d="M 1 1 L 15 19 L 29 1" stroke="#f5f5f5bf" fill="none" stroke-width="3"/>
                                 </svg>
                             </a>
-                            <span class="cross">
+                            <span th:if="${isGod}" class="cross">
                                 <span class="display-none"  th:text="${section.id}"></span>
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" width="25"
                                       height="25">
                                     <path d="M 0 0 L 25 25 M 0 25 L 25 0" stroke="white" fill="none" stroke-width="3"/>
                                 </svg>
                             </span>
-                            <span class="edit">
+                            <span th:if="${isGod}" class="edit">
                                 <span class="display-none" th:text="${section.id}"></span>
                                 <span class="display-none" th:text="${section.name}"></span>
                                 <span class="display-none" th:text="${section.link}"></span>
+                                <span class="display-none" th:text="${section.visibleForStudent}"></span>
                                 <svg width="40" height="35">
                                     <circle cx="20" cy="17.5" r="15" stroke="white" stroke-width="3" fill="none" />
                                     <path d="M 1 14 L 5 19 L 10 15" stroke="white" fill="none" stroke-width="3"/>
