--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/option-styles.css}"/>
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
+    <link rel="stylesheet" href="/css/closed-source/module-styles.css">
     <script th:src="@{/javascript/closed-source/option_logic.js}" defer></script>
+    <script src="/javascript/closed-source/whiteboard.js" defer></script>
 </head>
 
 <body>
@@ -20,6 +22,32 @@
             </svg>
         </div>
     </div>
+</div>
+
+<div id="canvas_panel" class="canvas-panel">
+    <div id="canvas_header" class="canvas-header">
+        <div id="pan" class="selected-border">
+            Ручка
+        </div>
+        <div id="rubber">Стиралка</div>
+        <div id="line">
+            <div class="description">Нажмите по области два раза, точки соединятся линией</div>
+            Линия
+        </div>
+        <div id="clear">
+            Очистить
+        </div>
+        <div id="back">
+            <div class="description">Или правая кнопка мыши</div>
+            Отмена
+        </div>
+        <div id="copy">
+            Копировать
+        </div>
+        <!--      <button id="copy">Скопировать</button>-->
+    </div>
+    <canvas id="whiteboard" width="700" height="600">
+    </canvas>
 </div>
 
 
