feature: добавлено заполнение варианта

--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -24,6 +24,10 @@
     </div>
 </div>
 
+<div id="tasks-wrapper">
+
+</div>
+
 <div id="canvas_panel" class="canvas-panel">
     <div id="canvas_header" class="canvas-header">
         <div id="pan" class="selected-border">
