design: работа над дизайном макета варианта feature: добавлено сохранение ввода ответов на задания

--- a/src/main/resources/static/css/closed-source/option-styles.css
+++ b/src/main/resources/static/css/closed-source/option-styles.css
@@ -52,3 +52,11 @@ body{
 #particles-js{
     background-color: black;
 }
+.input-wrap{
+    text-align: right;
+    padding: 3%;
+}
+
+#answer_wrapper{
+    padding: 3%;
+}
