--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div id="task-without-img" class="wrapper-2">
-          <input placeholder="Введите ответ:" type="text">
+          <input placeholder="Введите ответ" type="text">
           <button id="send" class="send">Отправить</button>
         </div>
       </div>
