feature: демо интеграции с miro

--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -333,3 +333,12 @@ input[type='text']:focus{
 .opacity-1{
     opacity: 1;
 }
+iframe{
+    z-index: 103;
+    position: absolute;
+    top: 13%;
+    right:2%;
+    width: 50%;
+    height: 84%;
+    border-radius: 20px;
+}
