--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -5,8 +5,6 @@
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
     <link rel="stylesheet" href="/css/closed-source/module-styles.css">
     <script th:src="@{/javascript/closed-source/option_logic.js}" defer></script>
-    <script src="/javascript/closed-source/whiteboard.js" defer></script>
-<!--    <script src="/javascript/closed-source/module_template_logic.js" defer></script>-->
     <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/option-styles.css}"/>
 </head>
@@ -78,36 +76,9 @@
             </div>
         </div>
     </div>
-    <div id="canvas_panel" class="canvas-panel">
-        <div id="canvas_header" class="canvas-header">
-
-            <div id="pan" class="selected-border">
-                Ручка
-            </div>
-            <div id="rubber">Стиралка</div>
-            <div id="line">
-                <div class="description">Нажмите по области два раза, точки соединятся линией</div>
-                Линия
-            </div>
-            <div id="clear">
-                Очистить
-            </div>
-            <div id="back">
-                <div class="description">Или правая кнопка мыши</div>
-                Отмена
-            </div>
-            <div id="copy">
-                Копировать
-            </div>
-        </div>
-        <canvas id="whiteboard" width="700" height="600">
-
-        </canvas>
-
-    </div>
 </div>
-
-
+<!--uXjVNuEFRQU-->
+<iframe src="https://miro.com/app/live-embed/uXjVNuEFRQU=/?autoplay=true&moveToViewport=-23165,-5837,13803,7546" frameBorder="0" scrolling="no" allowFullScreen></iframe>
 
 </body>
 </html>
