--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/css/closed-source/header-styles.css">
-  <script src="/javascript/closed-source/whiteboard.js" defer></script>
+
   <script src="/javascript/closed-source/module_template_logic.js" defer></script>
   <title th:text="'Задание ' + ${moduleId} + ' ЕГЭ'"></title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}" />
@@ -74,34 +74,9 @@
       </div>
     </div>
   </div>
-  <div id="canvas_panel" class="canvas-panel">
-    <div id="canvas_header" class="canvas-header">
 
-      <div id="pan" class="selected-border">
-        Ручка
-      </div>
-      <div id="rubber">Стиралка</div>
-      <div id="line">
-        <div class="description">Нажмите по области два раза, точки соединятся линией</div>
-        Линия
-      </div>
-      <div id="clear">
-        Очистить
-      </div>
-      <div id="back">
-        <div class="description">Или правая кнопка мыши</div>
-        Отмена
-      </div>
-      <div id="copy">
-        Копировать
-      </div>
-    </div>
-    <canvas id="whiteboard" width="700" height="600">
-
-    </canvas>
-
-  </div>
 </div>
+<iframe src="https://miro.com/app/live-embed/uXjVNuEFRQU=/?autoplay=true&moveToViewport=-23165,-5837,13803,7546" frameBorder="0" scrolling="no" allowFullScreen></iframe>
 <div id="wrong_answer_comment" class="comment-block opacity-0">
   <p class="comment-text">Пока что неправильно( , не сдавайся попробуй еще раз</p>
 </div>
