feature: улчшение демо-интеграции с miro, добавлена возможность расширения

--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="/css/closed-source/header-styles.css">
     <link rel="stylesheet" href="/css/closed-source/module-styles.css">
     <script th:src="@{/javascript/closed-source/option_logic.js}" defer></script>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/miro-integration-styles.css}"/>
+    <script th:src="@{/javascript/closed-source/miro-integration.js}" defer></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/option-styles.css}"/>
 </head>
 
@@ -35,7 +37,7 @@
                     <path d="M 26 1 L 1 15 L 26 30 L 26 1" fill="#f5f5f5bf" stroke-width="0"/>
                 </svg>
             </button>
-            <div class="navigation-block" >
+            <div class="navigation-block">
                 <div id="navigation_buttons_wrapper" class="navigation-buttons-wrapper">
                 </div>
             </div>
@@ -78,7 +80,16 @@
     </div>
 </div>
 <!--uXjVNuEFRQU-->
-<iframe src="https://miro.com/app/live-embed/uXjVNuEFRQU=/?autoplay=true&moveToViewport=-23165,-5837,13803,7546" frameBorder="0" scrolling="no" allowFullScreen></iframe>
+
+<iframe src="https://miro.com/app/live-embed/uXjVNuEFRQU=/?autoplay=true&moveToViewport=-23165,-5837,13803,7546"
+        frameBorder="0" scrolling="no" allowFullScreen>
+</iframe>
+<div id="stretch">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 51" width="24" height="51">
+        <path d="M 15 10 L 01 30 L 15 50" fill="none" stroke="#f5f5f5bf" stroke-width="3"/>
+    </svg>
+</div>
+
 
 </body>
 </html>
