--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -9,6 +9,8 @@
   <title th:text="'Задание ' + ${moduleId} + ' ЕГЭ'"></title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/open-source/particles-styles.css}" />
   <link rel="stylesheet" href="/css/closed-source/module-styles.css">
+  <script th:src="@{/javascript/closed-source/miro-integration.js}" defer></script>
+  <link rel="stylesheet" type="text/css" th:href="@{/css/closed-source/miro-integration-styles.css}"/>
 </head>
 <body>
 <div th:insert="~{header :: header}"></div>
@@ -76,7 +78,17 @@
   </div>
 
 </div>
-<iframe src="https://miro.com/app/live-embed/uXjVNuEFRQU=/?autoplay=true&moveToViewport=-23165,-5837,13803,7546" frameBorder="0" scrolling="no" allowFullScreen></iframe>
+
+<iframe src="https://miro.com/app/live-embed/uXjVNuEFRQU=/?autoplay=true&moveToViewport=-23165,-5837,13803,7546"
+        frameBorder="0" scrolling="no" allowFullScreen>
+</iframe>
+
+<div id="stretch">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 51" width="24" height="51">
+    <path d="M 15 10 L 01 30 L 15 50" fill="none" stroke="#f5f5f5bf" stroke-width="3"/>
+  </svg>
+</div>
+
 <div id="wrong_answer_comment" class="comment-block opacity-0">
   <p class="comment-text">Пока что неправильно( , не сдавайся попробуй еще раз</p>
 </div>
