feature: добавлена самостоятельная оценка заданий второй части

--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -60,6 +60,7 @@
                 </div>
             </div>
             <div id="answer_wrapper" class="answer-wrapper display-none">
+                <input type="number" min="0" value="0" id="score" class="display-none">
                 <button id="show_answer">Показать решение</button>
                 <div id="answer" class="answer display-none">
                     <hr>
