feature: дизайн самостоятельной оценки задания

--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -60,7 +60,10 @@
                 </div>
             </div>
             <div id="answer_wrapper" class="answer-wrapper display-none">
-                <input type="number" min="0" value="0" id="score" class="display-none">
+                <div style="text-align: center; margin-bottom: 30px">
+                    <div id="label">Оцените решение самостоятельно:</div>
+                    <input type="number" min="0" value="0" id="score" class="display-none">
+                </div>
                 <button id="show_answer">Показать решение</button>
                 <div id="answer" class="answer display-none">
                     <hr>
