--- a/src/main/resources/static/css/closed-source/option-styles.css
+++ b/src/main/resources/static/css/closed-source/option-styles.css
@@ -78,3 +78,61 @@ body{
     font-size: 20px;
     border-radius: 10px;
 }
+
+#submit-option{
+    position: absolute;
+    background-color: #121212;
+    padding: 1% 2%;
+    border-radius: 10px;
+    z-index: 100;
+    top: 13%;
+    left:35%;
+    color: #f5f5f5bf;
+    font-size: 20px;
+    font-family: 'Helvetica', sans-serif;
+    transition: color 0.4s ease, background-color 0.4s ease;
+}
+#submit-option:hover{
+    cursor: pointer;
+    background-color: #f5f5f5bf;
+    color: #000;
+}
+.smoke{
+    background-color: rgba(0,0,0,0.5);
+    position: fixed;
+    z-index: 200;
+    width: 100%;
+    height: 100%;
+}
+#send_warning{
+    text-align: center;
+    position: fixed;
+    border-radius: 20px;
+    color: #f5f5f5bf;
+    z-index: 202;
+    background-color: black;
+    width: 50%;
+    height: 20%;
+    top: 20%;
+    left: 25%;
+    font-size: 25px;
+    font-family: 'Helvetica', sans-serif;
+    padding-top: 2%;
+}
+#yes, #no{
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+    margin-top: 4%;
+    padding: 2% 4%;
+    border-radius: 20px;
+    width: 20%;
+    transition: opacity 0.3s ease, background-color 0.3s ease;
+}
+#yes{
+    background-color: #087c08;
+}
+#no{
+    background-color: #af0505;
+    margin-left: 3%;
+}
