--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+<div id="send_warning" class="display-none">
+    <span>Вы уверены, что хотите отправить вариант на проверку?</span>
+    <div id="yes">Да</div>
+    <div id="no">Отмена</div>
+</div>
 <div th:insert="~{header :: header}"></div>
 <div class="timer-block">
     <div style="display: flex; align-items: center;">
@@ -93,7 +98,9 @@
         <path d="M 15 10 L 01 30 L 15 50" fill="none" stroke="#f5f5f5bf" stroke-width="3"/>
     </svg>
 </div>
-
-
+<div id="submit-option">
+    Отправить
+</div>
+<div id="smoke" class="smoke display-none"></div>
 </body>
 </html>
