feature: сервер присылает в ответ id выполненных верно модулей

--- a/src/main/resources/templates/option-template.html
+++ b/src/main/resources/templates/option-template.html
@@ -19,11 +19,9 @@
 </div>
 <div id="feedback-wrapper" class="feedback-wrapper display-none">
     <div class="feedback-head">
-        Ваш результат:
+        Ваш результат: <span id="result"></span> / 100
     </div>
-    <div id="result">
 
-    </div>
     <div class="task-result-wrapper">
 
     </div>
