bug-fix: frontend части проверки варианта

--- a/src/main/resources/static/css/closed-source/option-styles.css
+++ b/src/main/resources/static/css/closed-source/option-styles.css
@@ -165,3 +165,9 @@ body{
     top: 55%;
     left: 65%;
 }
+.green-container{
+    border: 3px solid #07a207 !important;
+}
+.red-container{
+    border: 3px solid #cc0b0b !important;
+}
