--- a/src/main/resources/templates/choose-option-type-template.html
+++ b/src/main/resources/templates/choose-option-type-template.html
@@ -52,6 +52,12 @@
         </table>
     </div>
 
+
+</div>
+<div class="display-none" id="comment-wrapper">
+    <div class="comment-block">
+        <p class="comment-text">Не удалось найти вариант с таким номером</p>
+    </div>
 </div>
 </body>
 </html>
