module template refactor

--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -43,18 +43,10 @@
       <div class="task">
         <span class="label">Задание №<span id="task-num"></span>:</span>
         <div id="task-text" class="task-text"></div>
-        <div id="task-with-img" class="display-none" style="display: flex; margin-top: 10px">
-          <div class="placeholder"></div>
-          <div class="user-panel">
-            <div class="wrapper">
-              <input placeholder="Введите ответ:" type="text">
-              <button class="send">Отправить</button>
-            </div>
-          </div>
-        </div>
-        <div id="task-without-img" class="wrapper-2">
-          <input placeholder="Введите ответ" type="text">
-          <button id="send" class="send">Отправить</button>
+        <div id="task-img" class="display-none"></div>
+        <div class="wrapper-2">
+          <input id="answer-input" placeholder="Введите ответ" type="text">
+          <div id="send" class="send">Отправить</div>
         </div>
       </div>
       <div class="answer-wrapper">
