--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -7,60 +7,6 @@ body{
     position: fixed;
     text-align: center;
 }
-.canvas-header {
-    position: fixed;
-    top:13%;
-    text-align: center;
-    border: 3px dashed #f5f5f5bf;
-    border-radius: 30px;
-    padding: 10px 10px;
-    background-color: rgba(0, 0, 0, 0.1);
-    margin-left: 4px;
-}
-.canvas-panel{
-    overflow: auto;
-    position: fixed;
-    top: 11%;
-    right: 3%;
-    z-index: 2;
-    height: 85%;
-    border-radius: 50px;
-}
-.canvas-panel::-webkit-scrollbar {
-    width: 0;
-}
-#whiteboard{
-    background-color: white;
-    border-radius: 40px;
-    margin-top: 12vh;
-    cursor:pointer;
-}
-.cursor-cross-hair{
-    cursor: crosshair;
-}
-
-#back, #pan, #clear, #rubber, #line, #copy, .send{
-    font-size: 16px;
-    font-family: 'Helvetica', sans-serif;
-}
-#copy{
-    margin-right: 10px;
-}
-
-#back, #pan, #clear, #rubber, #copy, #line, .send{
-    user-select: none;
-    padding: 5px 15px;
-    display: inline-block;
-    background-color: black;
-    border-radius: 5px;
-    color: #f5f5f5bf;
-    border: 3px solid #f5f5f5bf;
-    margin-left: 10px;
-}
-#back:hover, #pan:hover, #clear:hover, #rubber:hover, #line:hover, .send:hover, #copy:hover{
-    cursor: pointer;
-    opacity: 0.8;
-}
 
 .selected-border{
     border: 3px solid #07a207 !important;
@@ -77,24 +23,6 @@ body{
 .yellow-border{
     border: 2px solid #deb304 !important;
     color: #deb304 !important;
-}
-#line, #back {
-    position: relative;
-}
-
-.description {
-    display: none;
-    position: absolute;
-    top: 50px;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
-    padding: 10px;
-    transition: display 0.5s ease;
-}
-
-#line:hover .description, #back:hover .description{
-    display: block;
 }
 
 .task-container{
@@ -141,12 +69,6 @@ body{
     margin-left: 10px;
 }
 
-.placeholder{
-    display: inline-block;
-    height: 220px;
-    width: 220px;
-    border: 1px solid white;
-}
 .task-text{
     font-size: 18px;
     display: inline-block;
@@ -204,7 +126,9 @@ input[type='text']:focus{
     cursor: pointer;
 }
 .wrapper-2{
-    text-align: right;
+    display: flex;
+    align-items: center;
+    justify-content: right;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -344,4 +268,25 @@ iframe{
 }
 body{
     user-select: none;
+}
+
+#send{
+    display: inline-block;
+    font-size: 18px;
+    font-family: 'Helvetica', sans-serif;
+    background-color: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+    color: #f5f5f5bf;
+    padding: 8px 25px;
+    border-radius: 10px;
+    margin-left: 10px;
+    transition: background-color 0.6s ease, color 0.6s ease, opacity 0.2s ease, padding-right 1s ease, padding-left 1s ease
+    , padding-top 1s ease,padding-bottom 1s ease;
+}
+#send:hover{
+    background-color: rgba(255, 255, 255, 0.5)!important;
+    color: #121212;
+}
+#send:active{
+    opacity: 0.8;
 }
