feature: добавлена возможность перехода от модуля к теории и отображение названия и номера текущего модуля

--- a/src/main/resources/static/css/closed-source/create-option-styles.css
+++ b/src/main/resources/static/css/closed-source/create-option-styles.css
@@ -48,7 +48,7 @@
     top:14%;
     padding: 1% 2%;
     border: 3px solid #f5f5f5bf;
-    background-color: #640064;
+    background-color: #07a207;
     color: #f5f5f5bf;
     border-radius: 20px;
     font-size: 28px;
