--- a/src/main/resources/static/css/closed-source/module-styles.css
+++ b/src/main/resources/static/css/closed-source/module-styles.css
@@ -290,3 +290,19 @@ body{
 #send:active{
     opacity: 0.8;
 }
+#current-task{
+    position: absolute;
+    left: 1%;
+    top:12%;
+    padding: 1%;
+    z-index: 110;
+    border: 3px solid #f5f5f5bf;
+    background-color: #018601;
+    color: #f5f5f5bf;
+    border-radius: 20px;
+    font-size: 28px;
+    font-family: 'Helvetica', sans-serif;
+}
+#current-task:hover{
+    cursor: pointer;
+}
