feature: сохранение массива с выбранными заданиями

--- a/src/main/resources/templates/create-option.html
+++ b/src/main/resources/templates/create-option.html
@@ -48,7 +48,7 @@
                     <div class="label">Задание №<span id="task-num"></span>:</div>
                     <div id="task-text" class="task-text"></div>
                     <div id="input-wrap" class="input-wrap">
-                        <div class="add">Добавить</div>
+                        <div id="add">Добавить</div>
                     </div>
                     <div id="task-with-img" class="display-none" style="display: flex; margin-top: 10px">
                         <div class="placeholder"></div>
