--- a/src/main/resources/static/css/closed-source/create-option-styles.css
+++ b/src/main/resources/static/css/closed-source/create-option-styles.css
@@ -54,3 +54,23 @@
     font-size: 28px;
     font-family: 'Helvetica', sans-serif;
 }
+#add{
+    display: inline-block;
+    font-size: 18px;
+    font-family: 'Helvetica', sans-serif;
+    background-color: rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+    color: #f5f5f5bf;
+    padding: 8px 25px;
+    border-radius: 10px;
+    margin-left: 10px;
+    transition: background-color 0.6s ease, color 0.6s ease, opacity 0.2s ease, padding-right 1s ease, padding-left 1s ease
+    , padding-top 1s ease,padding-bottom 1s ease;
+}
+#add:hover{
+    background-color: rgba(255, 255, 255, 0.5)!important;
+    color: #121212;
+}
+#add:active{
+    opacity: 0.8;
+}
