--- a/src/main/resources/templates/create-option.html
+++ b/src/main/resources/templates/create-option.html
@@ -73,6 +73,11 @@
                 </div>
             </div>
         </div>
+        <div class="right-block">
+            <div id="scroll-panel" class="scroll-panel">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
