--- a/src/main/resources/static/css/closed-source/create-option-styles.css
+++ b/src/main/resources/static/css/closed-source/create-option-styles.css
@@ -54,6 +54,9 @@
     font-size: 28px;
     font-family: 'Helvetica', sans-serif;
 }
+#current-task:hover{
+    cursor: default;
+}
 #add{
     display: inline-block;
     font-size: 18px;
@@ -73,4 +76,48 @@
 }
 #add:active{
     opacity: 0.8;
+}
+.right-block{
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.06)!important;
+    border-radius: 30px;
+    position: fixed;
+    top: 14%;
+    right: 2%;
+    width: 45%;
+    height: 80%;
+    padding: 1%;
+    text-align: center;
+}
+.task-proxy{
+    margin-bottom: 30px;
+    text-align: left;
+    display: inline-block;
+    padding: 2%;
+    font-size: 18px;
+    font-family: 'Helvetica', sans-serif;
+    background-color: rgba(255, 255, 255, 0.04);
+    color: #f5f5f5bf;
+    width: 75%;
+    border-radius: 20px;
+}
+.module-num{
+    display: inline-block;
+    margin-bottom: 10px;
+}
+.text{
+    display: block;
+    margin-bottom: 10px;
+}
+.scroll-panel{
+    height: 100%;
+    width: 100%;
+    display: inline-block;
+    overflow-y: auto;
+}
+.scroll-panel::-webkit-scrollbar{
+    display: none;
+}
+.text-align-right{
+    text-align: right;
 }
