--- a/src/main/resources/templates/create-option.html
+++ b/src/main/resources/templates/create-option.html
@@ -79,5 +79,13 @@
             </div>
         </div>
     </div>
+    <div id="position-wrapper">
+        <div class="display-none" id="comment-wrapper">
+            <div class="comment-block">
+                <p class="comment-text">Вы уже добавили задание №<span id="module-num-comment"></span> в вариант.
+                    Удалите его, если хотите выбрать другое</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
