--- a/src/main/resources/templates/create-option.html
+++ b/src/main/resources/templates/create-option.html
@@ -72,6 +72,11 @@
                     </svg>
                 </div>
             </div>
+            <div class="create-wrapper">
+                <div id="create">
+                    Создать варинт
+                </div>
+            </div>
         </div>
         <div class="right-block">
             <div id="scroll-panel" class="scroll-panel">
